Add persons endpoints
