# src/app/Models/Person.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Person extends Model
+{
+    protected $table = 'persons';
+    
+    protected $fillable = [
+        'name',
+        'last_name',
+        'email',
+    ];
+}
